syntax="proto3";

import "message.proto";
import "common.proto";
// import "google/protobuf/empty.proto";
package ULZProto;
option csharp_namespace         = "ULZAsset.ProtoMod";
option go_package               = "proto";
option java_multiple_files      = true;
option java_package             = "io.grpc.ULZAsset.ProtoMod";
option java_outer_classname     = "ULZAsset";



service RoomService {
    rpc CreateRoom      (RoomCreateReq)     returns (Room){ };
    rpc GetRoomList     (RoomSearchReq)     returns (RoomListResp){ }; 
    rpc GetRoomInfo     (RoomReq)           returns (RoomResp){};
    rpc DeleteRoom      (RoomReq)           returns (RoomResp){};
    rpc ServerBroadcast (RoomReq)           returns (stream RoomMsg){};
    rpc SendMessage     (RoomMsg)           returns (Empty){};
    rpc QuitRoom        (RoomReq)           returns (Empty){}
    rpc QuickPair       (RoomSearchReq)     returns (Room){};

}
